@@ -99,7 +99,7 @@
         }
 
         .centeredDotsControls, .centeredDotsControls a, .centeredDotsControls a span {
-            z-index: 10001;
+            z-index: 2;
             position: relative;
         }
 
