@@ -51,7 +51,7 @@
 				<li><img src="../images/05.jpg" alt="image description"/></li>			
 			</ul>
 		</div>
-		<div style="background:none;width:210px;height:40px;position:absolute;top:150px;left:100px;overflow:hidden;z-index:10001">
+		<div style="background:none;width:210px;height:40px;position:absolute;top:150px;left:100px;overflow:hidden;z-index:2">
 			<div class="customBox" style="width:350px;height:40px;background:lightgrey;">
 				<div class="custom" data-target="1" style="height:30px;width:60px;margin:2px;float:left;background:grey;padding:3px;" >
 					<img src="../images/01.jpg" height="30px" width="60px"/>
@@ -71,7 +71,7 @@
 			</div>
 		</div>
 	</div>
-	<h3>Usage: See the source code. Remember the "z-index:10001". </h3>
+	<h3>Usage: See the source code. Remember the "z-index:2". </h3>
 </div>
 <div style="width:728px;height:90px;margin:0 auto;">
 	<script type="text/javascript">
