@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>Sudo Slider | Fancy stuff 2</title>
+	<title>Sudo Slider | Thumbnails and captions with multiple slides</title>
 	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />    
 	<link rel="STYLESHEET" type="text/css" href="../css/style.css">
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -101,7 +101,7 @@
 </head>
 <body>
 <div id="container">
-	<h1>Sudo Slider jQuery Plugin - Fancy stuff 2</h1> 
+	<h1>Sudo Slider jQuery Plugin - Thumbnails and captions with multiple slides</h1>
 	<div style="position:relative;">
 		<div id="slider">
 
