@@ -28,23 +28,23 @@
     <div style="position:relative;">
         <div id="slider" class="slider">
             <div>
-                <h1 style="text-align: center">Drag the text! 1</h1>
+                <h1 style="text-align: center">Drag this text! 1</h1>
                 <img src="../images/01.jpg" alt="image description">
             </div>
             <div>
-                <h1 style="text-align: center">Drag the text! 2</h1>
+                <h1 style="text-align: center">Drag this text! 2</h1>
                 <img src="../images/02.jpg" alt="image description">
             </div>
             <div>
-                <h1 style="text-align: center">Drag the text! 3</h1>
+                <h1 style="text-align: center">Drag this text! 3</h1>
                 <img src="../images/03.jpg" alt="image description">
             </div>
             <div>
-                <h1 style="text-align: center">Drag the text! 4</h1>
+                <h1 style="text-align: center">Drag this text! 4</h1>
                 <img src="../images/04.jpg" alt="image description">
             </div>
             <div>
-                <h1 style="text-align: center">Drag the text! 5</h1>
+                <h1 style="text-align: center">Drag this text! 5</h1>
                 <img src="../images/05.jpg" alt="image description">
             </div>
         </div>
