@@ -40,10 +40,8 @@
             <br><a href="demos/customLinks.html">CustomLinks</a>
             <br><a href="demos/different effects.html">Different effects</a>
             <br><a href="demos/explorer effects.html">Explorer effects</a>
-            <br><a href="demos/fade not crossfade.html">Fade not crossfade</a>
             <br><a href="demos/fade.html">Fade</a>
             <br><a href="demos/fadeIn slider on load.html">FadeIn slider on load</a>
-            <br><a href="demos/flashlike.html">Flashlike</a>
             <br><a href="demos/frontpage.html">Frontpage</a>
             <br><a href="demos/fullscreen.html">Fullscreen slider</a>
             <br><a href="demos/fade buttons when no focus.html">Fade buttons when no focus</a>
